# AQIwebhook

./: .gitignore  Cargo.toml  README.md  buildlinuxbin.ps  go.mod  main.go
.cargo/: config.toml
src/: main.rs
tools/: README.md
