[package]
name = "AQIwebbook"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock", "std"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[target.'cfg(windows)'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

[target.'cfg(not(windows))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
